kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-microservice
  labels:
    name: nodejs-microservice
spec:
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/customer"
        backend:
          service:
            name: customer
            port: 
              number: 80

      - pathType: Prefix
        path: "/product"
        backend:
          service:
            name: product
            port: 
              number: 80

      - pathType: Prefix
        path: "/order"
        backend:
          service:
            name: order
            port: 
              number: 80
